--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,8 +27,7 @@
 @import 'styles/buttons';
 
 body {
-    background-color: var(--background);
-
+    background-color: var(--background-dark);
     font-family: 'Montserrat', sans-serif;
     color: rgba(255, 255, 255, 0.8);
 }
