--- a/src/app/nav/side-bar/side-bar.component.scss
+++ b/src/app/nav/side-bar/side-bar.component.scss
@@ -3,7 +3,8 @@
      display: flex;
      flex-direction: column;
      gap: 24px;
-     background-color: var(--background-dark);
+     background-color: var(--background);
+     align-items: flex-end;
  }
 
  .logo {
@@ -13,31 +14,23 @@
      color: var(--primary);
  }
 
- ul {
+ .cats {
 
      display: flex;
      flex-direction: column;
-     gap: 5px;
-     padding-left: 10px;
+     align-items: flex-end;
+     gap: 10px;
 
-     li {
-         margin: auto 0px auto 24px;
-         text-align: center;
-         cursor: pointer;
-         list-style: none;
+     .cat-items {
+         display: flex;
+         flex-direction: column;
+         align-items: flex-end;
+         gap: 5px;
 
          a {
-             color: var(--font-color);
-             font-size: 16px;
+             color: var(--secondary);
+
              text-decoration: none;
-
-             &.admin-menu {
-                 color: rgba(255, 0, 0, 0.5);
-             }
-
-             &.admin-menu:after {
-                 color: rgba(255, 0, 0, 0.5);
-             }
 
              &:hover {
                  &:after {
