Added Github link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
-<app-side-bar></app-side-bar>
-<div class="route-container">
-    <router-outlet></router-outlet>
+<div class="left-gutter">
+
+</div>
+<div class="middle-section">
+    <app-side-bar></app-side-bar>
+    <div class="route-container">
+        <div class="top-bar"><a href="https://github.com/timothydodd/utilplex"><img alt="GitHub"
+                     src="assets/github-mark.svg" /></a></div>
+        <router-outlet></router-outlet>
+    </div>
+</div>
+<div class="right-gutter">
+
 </div>
