--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,29 @@
 :host {
     display: flex;
     flex-direction: row;
+    min-height: 100%;
 
-    height: 100vh;
 
     app-side-bar {
         flex-shrink: 1;
+    }
+
+    .left-gutter {
+        background-color: var(--background-dark);
+    }
+
+    .middle-section {
+        display: flex;
+        flex-direction: row;
+        min-height: 100%;
+        height: 100vh;
+        width: 1600px;
+    }
+
+    .left-gutter,
+    .right-gutter,
+    .middle-section {
+        flex-grow: 1;
     }
 
     .route-container {
@@ -13,5 +31,23 @@
         flex-direction: column;
         flex-grow: 1;
         padding: 24px;
+        padding-left: 78px;
+        gap: 15px;
+
+        .top-bar {
+            display: flex;
+            flex-direction: row;
+            flex-shrink: 1;
+
+            a {
+                margin-left: auto;
+            }
+
+            img {
+
+                width: 32px;
+                height: 32px;
+            }
+        }
     }
 }
