--- a/src/app/nav/side-bar/side-bar.component.html
+++ b/src/app/nav/side-bar/side-bar.component.html
@@ -1,9 +1,11 @@
-<div class="logo">Util</div>
-<div *ngFor="let c of categories" class="cats">
-    <h5>{{c.name}}</h5>
-    <div class="cat-items">
-        <a *ngFor="let r of c.routes" [routerLink]="[r.url]" routerLinkActive="router-link-active">{{
-            r.name
-            }}</a>
+<div class="wrap">
+    <div class="logo">Util</div>
+    <div *ngFor="let c of categories" class="cats">
+        <h5>{{c.name}}</h5>
+        <div class="cat-items">
+            <a *ngFor="let r of c.routes" [routerLink]="[r.url]" routerLinkActive="router-link-active">{{
+                r.name
+                }}</a>
+        </div>
     </div>
 </div>
