--- a/src/app/nav/side-bar/side-bar.component.scss
+++ b/src/app/nav/side-bar/side-bar.component.scss
@@ -1,10 +1,17 @@
  :host {
-     padding: 24px;
      display: flex;
-     flex-direction: column;
-     gap: 24px;
-     background-color: var(--background);
-     align-items: flex-end;
+     background-color: var(--background-dark);
+     border-right: 1px solid rgba($color: white, $alpha: 0.05);
+
+
+     .wrap {
+         display: flex;
+         flex-direction: column;
+         gap: 24px;
+         padding: 24px;
+         align-items: flex-end;
+         border-right: 1px solid black;
+     }
  }
 
  .logo {
