--- a/src/app/nav/side-bar/side-bar.component.scss
+++ b/src/app/nav/side-bar/side-bar.component.scss
@@ -11,6 +11,7 @@
          padding: 24px;
          align-items: flex-end;
          border-right: 1px solid black;
+         box-shadow: inset -10px 0 5px -5px rgba(0, 0, 0, 0.08);
      }
  }
 
