--- a/src/app/converters/convert-view/convert-view.component.html
+++ b/src/app/converters/convert-view/convert-view.component.html
@@ -1,21 +1,26 @@
-<div *ngIf="error()" class="error">{{error()}}</div>
+<div *ngIf="error()" class="error">{{ error() }}</div>
 
 <div class="split-view">
-    <div class="editor-wrap">
-        <div class="tool-bar">
-            <button class="btn btn-secondary" (click)="pasteClick()">Paste</button>
-        </div>
-        <div class="sub-wrap">
-            <ngx-monaco-editor #editor class="editor" [options]="inputOptions" [ngModel]="inputCode()"
-                               (ngModelChange)="inputChanged($event)"></ngx-monaco-editor>
-        </div>
+  <div class="editor-wrap">
+    <div class="tool-bar section-header">
+      <button class="btn btn-secondary" (click)="pasteClick()">Paste</button>
     </div>
-    <div class="editor-wrap">
-        <div class="tool-bar">
-            <button class="btn btn-secondary" (click)="copyClick()">Copy</button>
-        </div>
-        <div class="sub-wrap">
-            <ngx-monaco-editor class="editor" [options]="outputOptions" [ngModel]="outputCode()"></ngx-monaco-editor>
-        </div>
+    <div class="sub-wrap">
+      <ngx-monaco-editor
+        #editor
+        class="editor"
+        [options]="inputOptions"
+        [ngModel]="inputCode()"
+        (ngModelChange)="inputChanged($event)"
+      ></ngx-monaco-editor>
     </div>
+  </div>
+  <div class="editor-wrap">
+    <div class="tool-bar section-header">
+      <button class="btn btn-secondary" (click)="copyClick()">Copy</button>
+    </div>
+    <div class="sub-wrap">
+      <ngx-monaco-editor class="editor" [options]="outputOptions" [ngModel]="outputCode()"></ngx-monaco-editor>
+    </div>
+  </div>
 </div>
