--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,16 @@
-<div class="left-gutter">
-
-</div>
+<div class="left-gutter"></div>
 <div class="middle-section">
-    <app-side-bar></app-side-bar>
+  <app-side-bar></app-side-bar>
+  <div class="back">
     <div class="route-container">
-        <div class="top-bar">
-            @if(title()){
-            <h1>{{title()}}</h1>
-            }
-            <a href="https://github.com/timothydodd/utilplex"><img alt="GitHub" src="assets/github-mark.svg" />
-            </a>
-        </div>
-        <router-outlet></router-outlet>
+      <div class="top-bar">
+        @if (title()) {
+          <h1>{{ title() }}</h1>
+        }
+        <a href="https://github.com/timothydodd/utilplex"><img alt="GitHub" src="assets/github-mark.svg" /> </a>
+      </div>
+      <router-outlet></router-outlet>
     </div>
+  </div>
 </div>
-<div class="right-gutter">
-
-</div>
+<div class="right-gutter"></div>
