--- a/src/app/formatters/format-view/format-view.component.scss
+++ b/src/app/formatters/format-view/format-view.component.scss
@@ -8,12 +8,18 @@
         display: flex;
         flex-direction: row;
         flex-grow: 1;
+        gap: 10px;
 
         .editor-wrap {
+                    padding: 5px;
+                        background-color: hsla(0, 0%, 100%, 0.03);
+                        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+                        border: 1px solid var(--border-color);
+                        border-radius: 0.375rem;
             display: flex;
             flex-direction: column;
             flex-grow: 1;
-
+                    border: 1px solid var(--border-color);
             gap: 10px;
 
             .sub-wrap {
