--- a/src/app/pages/welcome/welcome.component.css
+++ b/src/app/pages/welcome/welcome.component.css
@@ -1,7 +1,34 @@
 :host {
   display: block;
-
+}
   main {
     max-width: 800px;
   }
-}
+  .section-content{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin: 0 auto;
+    padding: 20px;
+
+  }
+  button{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 130px;
+    height: 130px;
+    break-inside: avoid;
+    color:var(--primary);
+    background-color: hsla(0, 0%, 100%, .05);
+    border-radius: 10px;
+    font-weight: 600;
+
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3),
+    0 1px 3px rgba(0, 0, 0, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    font-size: 1rem;
+    padding-top: 10px;
+  }
