--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-
+@use "styles/vars" as *;
+@use "styles/mixins" as *;
 /* Importing Bootstrap SCSS file. */
 @import "./../node_modules/bootstrap/scss/bootstrap";
 
@@ -10,7 +11,11 @@
 
 @import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-
+@import "styles/ng-select.scss";
+@import "styles/buttons";
+@import "styles/forms";
+@import "styles/modal";
+@import "styles/scaffolding";
 @function hexToRGBString($hexColor) {
     @return "#{red($hexColor)},#{green($hexColor)},#{blue($hexColor)}";
 }
@@ -49,6 +54,8 @@ $yellow: #e4b676;
     --bs-btn-focus-shadow-rgb: 49,
         132,
         253;
+                        --header-bg:hsla(0, 0%, 100%, 0.05);
+                        --border-color:rgba(0, 0, 0, 0.125);
 }
 
 @import 'styles/buttons';
@@ -89,4 +96,25 @@ h2 {
     border-color: $purple;
     outline: 0;
     box-shadow: 0 0 0 0.25rem rgba($purple, 0.25);
+}
+.section{
+    border: 1px solid var(--border-color);
+    border-radius: 0.375rem;
+    overflow: hidden;
+    margin-bottom: 1rem;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.section-header {
+    padding: 0.75rem 1rem;
+    margin-bottom: 0;
+    background-color: var(--header-bg);
+    border-bottom: 1px solid var(--border-color);
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.section {
+    padding: 1.25rem;
+    background-color: hsla(0, 0%, 100%, 0.03);
 }
