--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,52 +1,43 @@
-$yellow: #e4b676;
-$yellow-rgba: rgba($color: $yellow, $alpha: 0.3);
-
-%button {
-    font-style: normal;
+.btn.btn-icon {
+    border: none;
+    background-color: unset;
     font-weight: 500;
-    padding: 0px 16px;
-    border-radius: 4px;
-    font-size: 14px;
-    line-height: 32px;
-    min-height: 32px;
-    outline: 0px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    font-size: 0.875rem;
+    padding: unset;
+    margin: unset;
+    display: grid;
+    place-items: center;
 }
 
-.btn-secondary {
-    @extend %button;
+.btn.btn-icon:hover {
+    color: var(--bs-primary);
+    border: none;
+    background-color: unset;
+}
 
-    &:not(:disabled):not(.disabled):active {
-        background-color: transparent;
-        color: var(--font-color);
-        border-color: var(--secondary);
-
-
-        &:focus {
-            box-shadow: 0 0 0 0.2rem rgba($color: var(--secondary-rgb), $alpha: 0.2);
-        }
-    }
-
-
-    &:focus {
-        background-color: transparent;
-        color: var(--font-color);
-        border-color: var(--secondary);
-        box-shadow: 0 0 0 0.2rem rgba($color: var(--secondary-rgb), $alpha: 0.2);
-    }
-
-    color: var(--font-color);
-    border: 1px solid $yellow-rgba;
+.image-button {
+    padding: 0;
+    border: none;
     background-color: transparent;
+}
 
-    &:not(:disabled):not(.disabled):hover {
-        color: $yellow;
-        background-color: transparent;
-        border-color: $yellow;
-    }
+.image-button img {
+    display: block;
+    max-width: 100%;
+    /* Makes the image responsive */
+}
 
+.btn-link {
+    cursor: pointer;
+    padding: 0;
+    background-color: transparent;
+    text-decoration: underline;
+    border: none;
+}
 
+.btn-no-border {
+    cursor: pointer;
+    padding: 0;
+    background-color: transparent;
+    border: none;
 }
