--- a/src/app/pages/welcome/welcome.component.css
+++ b/src/app/pages/welcome/welcome.component.css
@@ -31,4 +31,11 @@
     border: 1px solid rgba(255, 255, 255, 0.2);
     font-size: 1rem;
     padding-top: 10px;
+    &:hover{
+      background-color: hsla(0, 0%, 100%, .1);
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5),
+      0 1px 3px rgba(0, 0, 0, 0.3);
+      border: 1px solid var(--secondary);
+      color: var(--secondary);
+    }
   }
