--- a/src/app/time/time-zones/time-zones.component.html
+++ b/src/app/time/time-zones/time-zones.component.html
@@ -1,44 +1,54 @@
 <div class="flex-row">
-    <div class="flex-column f-center">
-        <label for="timePicker">Time</label>
-        <timepicker id="timePicker" [(ngModel)]="selectedTime" (ngModelChange)="timeZoneChanged()"
-                    [showMeridian]="this.amPM">
-        </timepicker>
-    </div>
+  <div class="flex-column f-center">
+    <label for="timePicker">Time</label>
+    <timepicker
+      id="timePicker"
+      [(ngModel)]="selectedTime"
+      (ngModelChange)="timeZoneChanged()"
+      [showMeridian]="this.amPM"
+    >
+    </timepicker>
+  </div>
+  <div class="flex-column f-center grow">
+    <label for="amPMSwitch">AM / PM</label>
     <div class="flex-column f-center grow">
-        <label for="amPMSwitch">AM / PM</label>
-        <div class="flex-column f-center grow">
-            <app-switch id="amPMSwitch" [(ngModel)]="amPM"></app-switch>
-        </div>
+      <app-switch id="amPMSwitch" [(ngModel)]="amPM"></app-switch>
     </div>
-
+  </div>
 </div>
-
 
 <div class="flex-row">
+  <div class="flex-column grow gap-24">
+    <div class="flex-column">
+      <label for="tzFrom">Time Zone From</label>
 
-    <div class="flex-column grow gap-24">
-        <div class="flex-column">
-            <label for="tzFrom">Time Zone From</label>
-
-            <ng-select id="tzFrom" [items]="this.zones" bindLabel="text" [(ngModel)]="currentZone"
-                       (change)="timeZoneChanged()"></ng-select>
-        </div>
-        <div class="flex-column">
-            <label for="tzFrom">Time Zone To</label>
-            <ng-select [items]="this.zones" bindLabel="text" [(ngModel)]="covertToZone"
-                       (change)="timeZoneChanged()"></ng-select>
-        </div>
+      <ng-select
+        id="tzFrom"
+        [items]="this.zones"
+        bindLabel="text"
+        [(ngModel)]="currentZone"
+        (change)="timeZoneChanged()"
+      ></ng-select>
     </div>
-    <button class="btn btn-secondary" (click)="btnSwitch()">Switch</button>
+    <div class="flex-column">
+      <label for="tzFrom">Time Zone To</label>
+      <ng-select
+        [items]="this.zones"
+        bindLabel="text"
+        [(ngModel)]="covertToZone"
+        (change)="timeZoneChanged()"
+      ></ng-select>
+    </div>
+  </div>
+  <button class="btn btn-secondary" (click)="btnSwitch()">Switch</button>
 </div>
-<div *ngIf="error()" class="error">{{error()}}</div>
+<div *ngIf="error()" class="error">{{ error() }}</div>
 
 <div class="flex-column">
-    <label for="tzFrom">Time From</label>
-    <div class="time">{{currentTimeFrom()}}</div>
+  <label for="tzFrom">Time From</label>
+  <div class="time">{{ currentTimeFrom() }}</div>
 </div>
 <div class="flex-column">
-    <label for="tzFrom">Time To</label>
-    <div class="time">{{currentTimeTo()}}</div>
+  <label for="tzFrom">Time To</label>
+  <div class="time">{{ currentTimeTo() }}</div>
 </div>
