--- a/src/app/converters/convert-view/convert-view.component.html
+++ b/src/app/converters/convert-view/convert-view.component.html
@@ -3,6 +3,7 @@
 <div class="split-view">
   <div class="editor-wrap">
     <div class="tool-bar section-header">
+      <label>Input</label>
       <button class="btn btn-secondary" (click)="pasteClick()">Paste</button>
     </div>
     <div class="sub-wrap">
@@ -17,6 +18,7 @@
   </div>
   <div class="editor-wrap">
     <div class="tool-bar section-header">
+      <label>Output</label>
       <button class="btn btn-secondary" (click)="copyClick()">Copy</button>
     </div>
     <div class="sub-wrap">
