--- a/src/app/nav/side-bar/side-bar.component.scss
+++ b/src/app/nav/side-bar/side-bar.component.scss
@@ -20,6 +20,7 @@
      font-size: 24px;
      text-shadow: 0px 2px 5px rgba(0, 0, 0, 1);
      color: var(--blue);
+     text-decoration: none;
  }
 
  .cats {
