--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,8 +30,9 @@
         display: flex;
         flex-direction: column;
         flex-grow: 1;
-        padding: 24px;
-        padding-left: 34px;
+        padding: 20px;
+        padding-left: 35px;
+        padding-bottom: 35px;
         gap: 15px;
         //backdrop-filter: blur(5px);
         .top-bar {
