--- a/src/app/components/switch/switch.component.scss
+++ b/src/app/components/switch/switch.component.scss
@@ -1,15 +1,30 @@
+@use "sass:color";
+
 $control-background: #fbf8ff;
-$green: rgba($color: mix(green, $control-background, 40%),
+$green: rgba(color.mix(green, $control-background, 40%),
         $alpha: 0.8,
     );
 
-$red: rgba($color: mix(black, $control-background, 15%),
+$red: rgba(color.mix(black, $control-background, 15%),
         $alpha: 0.8,
     );
 $small-size: 16px;
 
 :host {
-    label {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+
+    .s-label {
+        font-weight: bold;
+    }
+
+    &.s-disable {
+        opacity: 0.5;
+    }
+
+    label.switch {
         position: relative;
         display: inline-block;
         width: 60px;
@@ -20,9 +35,9 @@ $small-size: 16px;
             height: 22px;
         }
 
-        &.s-disable {
-            opacity: 0.5;
-        }
+
+
+
 
         .slider {
             position: absolute;
@@ -54,8 +69,6 @@ $small-size: 16px;
             left: 3px;
             bottom: 3px;
         }
-
-
 
         /* Rounded sliders */
         .slider.round {
