--- a/src/app/formatters/format-view/format-view.component.html
+++ b/src/app/formatters/format-view/format-view.component.html
@@ -2,6 +2,7 @@
 <div class="split-view">
   <div class="editor-wrap">
     <div class="tool-bar section-header">
+      <label>Input</label>
       <button class="btn btn-secondary" (click)="pasteClick()">Paste</button>
     </div>
     <div class="sub-wrap">
@@ -16,6 +17,7 @@
   </div>
   <div class="editor-wrap">
     <div class="tool-bar section-header">
+      <label>Output</label>
       <button class="btn btn-secondary" (click)="copyClick()">Copy</button>
     </div>
     <div class="sub-wrap">
