--- a/src/styles/ng-select.scss
+++ b/src/styles/ng-select.scss
@@ -2,15 +2,15 @@
 
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-selected,
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-selected.ng-option-marked {
-    color: $ng-select-input-text;
+    color: var(--font-color);
     font-weight: 600;
 
 }
-
-// .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-marked {
-//     background-color: $ng-select-highlight;
-//     color: #44475a;
-// }
+.ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-selected .ng-option-label,
+.ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-selected.ng-option-marked .ng-option-label
+{
+        color: rgba(0, 0, 0, 0.8);
+}
 
 .ng-select .ng-clear-wrapper,
 .ng-select .ng-arrow-wrapper .ng-arrow {
@@ -24,7 +24,7 @@
 .ng-select.ng-select-single .ng-select-container {
     background-color: var(--header-bg);
     border-color: rgba(0, 0, 0, 0.3);
-    color: var(--secondary);
+    color: var(--font-color);
     min-height: 31px;
     height: 31px;
 }
@@ -39,7 +39,7 @@
 }
 
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-option {
-    color: rgba(0, 0, 0, 0.9);
+    color: var(--font-color);
 }
 
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-marked {
