feat: implement signal-based title management in RouteService and update components to utilize it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
   <div class="back">
     <div class="route-container">
       <div class="top-bar">
-        @if (title()) {
-          <h1>{{ title() }}</h1>
+        @if (RouterService.Title()) {
+          <h1>{{ RouterService.Title() }}</h1>
         }
         <a href="https://github.com/timothydodd/utilplex"><img alt="GitHub" src="assets/github-mark.svg" /> </a>
       </div>
